preconnect gstatic fonts

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -16,7 +16,7 @@
     <meta http-equiv="Expires" content="31536000" />
     <!-- Google Fonts -->
     <link rel="preload" href="https://fonts.googleapis.com">
-    <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="styles/style.css">
