--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -11,11 +11,8 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://josephperalta03011993.github.io/wdd231/chamber/images/og-image.webp">
     <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/chamber/join.html">
-    <!-- Cache control meta tags -->
-    <meta http-equiv="Cache-Control" content="max-age=31536000" />
-    <meta http-equiv="Expires" content="31536000" />
     <!-- Google Fonts -->
-    <link rel="preload" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- CSS -->
