update index for content site plan

--- a/mysite/index.html
+++ b/mysite/index.html
@@ -64,8 +64,53 @@
                     </ul>
                 </p>
             </li>
-            <li>Color Schema</li>
-            <li>Typography</li>
+            <li>
+                <h2>Color Schema</h2>
+                <p>
+                    Primary Color: #9CE5FF (Light Blue) <br>
+                    Usage: <br>
+                    <ul>
+                        <li>Background color for main sections of the website.</li>
+                        <li>Accent color for buttons, links, and interactive elements.</li>
+                        <li>Background color for headers or footers (depending on design).</li>
+                    </ul>
+                    <br>
+                    Secondary Color: #000000 (Black) <br>
+                    Usage: <br>
+                    <ul>
+                        <li>Text color for all headings, paragraphs, links, etc. Essentially, all text content.</li>
+                        <li>Borders or dividers.</li> 
+                        <li>Buttons</li>
+                    </ul>
+                    <br> 
+                    Accent Color: #FFFFFF (White) <br>
+                    Usage: <br>
+                    <ul>
+                        <li>Page background.</li>
+                        <li>Text color on black buttons.</li> 
+                        <li>Cards and containers</li>
+                    </ul>
+                </p>
+            </li>
+            <li>
+                <h2>Typography</h2>
+                <p>
+                    Primary Font: Roboto (Sans-Serif) <br>
+                    Usage: <br>
+                    <ul>
+                        <li>Headings (H1, H2, H3, H4, H5, H6, P)</li>
+                        <li>Buttons & Navigation</li>
+                        <li>Call-to-action (CTA) elements</li>
+                    </ul>
+                    <br>
+                    Secondary Font: Serif (Backup for Roboto) <br>
+                    Usage: <br>
+                    <ul>
+                        <li>Body text (paragraphs, long-form content)</li>
+                        <li>Any fallback when Roboto isn't available</li>
+                    </ul>
+                </p>
+            </li>
             <li>Wireframe</li>
         </ol>
     </main>
