--- a/mysite/index.html
+++ b/mysite/index.html
@@ -111,7 +111,13 @@
                     </ul>
                 </p>
             </li>
-            <li>Wireframe</li>
+            <li>
+                <h2>Wireframe</h2>
+                <div id="wireframe-images">
+                    <img src="images/wireframe-desktop.webp" alt="Wireframe for BizlyHub Website Desktop View" width="100" height="100">
+                    <img src="images/wireframe-mobile.webp" alt="Wireframe for BizlyHub Website Desktop View" width="100" height="100">
+                </div>
+            </li>
         </ol>
     </main>
     <footer>
