update img layout and size

--- a/mysite/index.html
+++ b/mysite/index.html
@@ -113,12 +113,18 @@
             </li>
             <li>
                 <h2>Wireframe</h2>
-                <div id="wireframe-images">
-                    <img src="images/wireframe-desktop.webp" alt="Wireframe for BizlyHub Website Desktop View" width="100" height="100">
-                    <img src="images/wireframe-mobile.webp" alt="Wireframe for BizlyHub Website Desktop View" width="100" height="100">
-                </div>
             </li>
         </ol>
+        <div id="wireframe-images">
+            <div>
+                <h3>Desktop</h3>
+                <img src="images/wireframe-desktop.webp" alt="Wireframe for BizlyHub Website Desktop View" width="481" height="904">
+            </div>
+            <div>
+                <h3>Mobile</h3>
+                <img src="images/wireframe-mobile.webp" alt="Wireframe for BizlyHub Website Desktop View" width="420" height="1016">
+            </div>
+        </div>
     </main>
     <footer>
         <div></div>
