--- a/mysite/index.html
+++ b/mysite/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Site Plan</title>
+    <title>Project Site Plan - BizlyHub</title>
     <meta name="author" content="Joseph D. Peralta">
     <meta name="description" content="This page provides information about Project Site Plan for BizlyHub a business providing web development service.">
     <meta property="og:title" content="BizlyHub Project Site Plan">
