test good for html css

--- a/mysite/index.html
+++ b/mysite/index.html
@@ -49,8 +49,7 @@
             </li>
             <li>
                 <h2>Scenarios</h2>
-                <p>
-                    for the BizlyHub Webiste<br>
+                <p>for the BizlyHub Webiste</p><br>
                     <ul>
                         <li>
                             I'm a small business owner and I need a website, but I don't know where to start. 
@@ -62,13 +61,12 @@
                             Does BizlyHub offer services to improve my website's search engine ranking?
                         </li>
                     </ul>
-                </p>
             </li>
             <li>
                 <h2>Color Schema</h2>
-                <p>
-                    Primary Color: #9CE5FF (Light Blue) <br>
+                <p>Primary Color: #9CE5FF (Light Blue) <br>
                     Usage: <br>
+                </p>
                     <ul>
                         <li>Background color for main sections of the website.</li>
                         <li>Accent color for buttons, links, and interactive elements.</li>
@@ -90,13 +88,13 @@
                         <li>Text color on black buttons.</li> 
                         <li>Cards and containers</li>
                     </ul>
-                </p>
             </li>
             <li>
                 <h2>Typography</h2>
                 <p>
                     Primary Font: Roboto (Sans-Serif) <br>
                     Usage: <br>
+                </p>
                     <ul>
                         <li>Headings (H1, H2, H3, H4, H5, H6, P)</li>
                         <li>Buttons & Navigation</li>
@@ -109,7 +107,6 @@
                         <li>Body text (paragraphs, long-form content)</li>
                         <li>Any fallback when Roboto isn't available</li>
                     </ul>
-                </p>
             </li>
             <li>
                 <h2>Wireframe</h2>
