add head meta tags

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discover Page of Bulacan Chamber of Commerce</title>
     <meta name="author" content="Joseph D. Peralta">
-    <meta name="description" content="">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
+    <meta name="description" content="A page about places to discover in bulacan chamber of commerce">
+    <meta property="og:title" content="Discover Page of Bulacan Chamber of Commerce">
+    <meta property="og:description" content="A page about places to discover in bulacan chamber of commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://josephperalta03011993.github.io/wdd231/chamber/images/og-image.webp">
     <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/chamber/discover.html">
