--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -43,6 +43,7 @@
     </header>
     <main id="discover-container">
         <h1>Discover Bulacan Chamber of Commerce</h1>
+        <div id="sidebar"></div>
         <div id="places-to-visit"></div>
     </main>
     <footer>
