--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -22,6 +22,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" as="style" crossorigin>
+    <link rel="preload" as="image" href="images/little-palawan.webp" type="image/webp" fetchpriority="high">
 </head>
 <body>
     <header>
