--- a/chamber/join.html
+++ b/chamber/join.html
@@ -134,6 +134,6 @@
         </div>
     </footer>
     <!-- JS -->
-    <script defer src="scripts/join.js"></script>
+    <!-- <script defer src="scripts/join.js"></script> -->
 </body>
 </html>
