--- a/chamber/join.html
+++ b/chamber/join.html
@@ -12,15 +12,7 @@
     <meta property="og:image" content="https://josephperalta03011993.github.io/wdd231/chamber/images/og-image.webp">
     <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/chamber/join.html">
     <!-- CSS -->
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/larger.css">
-    <!-- Favicon -->
-    <link rel="icon" href="images/favicon.ico">
-    <!-- Google Fonts -->
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" as="style" crossorigin>
+    
 </head>
 <body>
     <header>
@@ -40,7 +32,71 @@
             </ul>
         </nav>
     </header>
+    <main id="join-main-container">
+        <h1>JOIN</h1>
+        <div class="content-container">
+            <section id="membership-application-form">
+                <h2>Membership Application Form</h2>
+                <form id="join-form" action="thankyou.html" method="GET">
+                    <label for="first_name">Applicant's First Name:</label>
+                    <input type="text" name="first_name" id="first_name" required autocomplete="given-name" title="Enter your first name">
+                    <br>
+                    <label for="last_name">Applicant's Last Name:</label>
+                    <input type="text" name="last_name" id="last_name" required autocomplete="family-name" title="Enter your last name">
+                    <br>
+                    <label for="org_title">Applicant's Organizational Title:</label>
+                    <input type="text" name="org_title" id="org_title" required pattern="[A-Za-z\s\-]{7,}" title="Enter your organizational title (letters, hyphens, spaces only, minimum 7 characters)">
+                    <br>
+                    <label for="email">Email Address:</label>
+                    <input type="email" name="email" id="email" required autocomplete="email" placeholder="example@yourdomain.com" title="Enter your email address">
+                    <br>
+                    <label for="phone">Mobile Phone Number:</label>
+                    <input type="tel" name="phone" id="phone" required autocomplete="tel" title="Enter your mobile phone number">
+                    <br>
+                    <label for="organization">Business/Organization Name:</label>
+                    <input type="text" name="organization" id="organization" required autocomplete="organization" title="Enter your business/organization name">
+                    <br>
+                    <label for="membership">Membership Level:</label>
+                    <select name="membership" id="membership" title="Select your membership level">
+                        <option value="np">Non-Profit Membership (Free)</option>
+                        <option value="bronze">Bronze Membership</option>
+                        <option value="silver">Silver Membership</option>
+                        <option value="gold">Gold Membership</option>
+                    </select>
+                    <br>
+                    <label for="description">Business/Organization Description:</label>
+                    <textarea name="description" id="description" title="Provide a brief description of your business/organization" rows="4"></textarea>
+                    <br>
+                    <input type="hidden" name="timestamp" id="timestamp">
     
+                    <button type="submit">Appy for Membership</button>
+                </form> 
+            </section>
+            <section id="membership-levels">
+                <h2>Membership Levels</h2>
+                <div id="non-profit">
+                    <h3>Non Profit Membership Level</h3>
+                    <button id="btnNP">Learn More</button>
+                </div>
+                <div id="bronze">
+                    <h3>Bronze Membership Level</h3>
+                    <button id="btnBronze">Learn More</button>
+                </div>
+                <div id="silver">
+                    <h3>Silver Membership Level</h3>
+                    <button id="btnSilver">Learn More</button>
+                </div>
+                <div id="gold">
+                    <h3>Gold Membership Level</h3>
+                    <button id="btnGold">Learn More</button>
+                </div>
+            </section>
+        </div>
+        <!-- Reusable Modal -->
+        <dialog id="dialogBox">
+            <span id="dialog-content"></span>
+        </dialog>
+    </main>
     <footer>
         <div class="contact-info">
             <p><strong>Bulacan Chamber of Commerce</strong></p>
