--- a/chamber/join.html
+++ b/chamber/join.html
@@ -12,7 +12,10 @@
     <meta property="og:image" content="https://josephperalta03011993.github.io/wdd231/chamber/images/og-image.webp">
     <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/chamber/join.html">
     <!-- CSS -->
-    
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    <!-- Favicon -->
+    <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
     <header>
