--- a/chamber/join.html
+++ b/chamber/join.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/chamber/join.html">
     <!-- CSS -->
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/larger.css">
+    <!-- <link rel="stylesheet" href="styles/larger.css"> -->
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico">
 </head>
