--- a/chamber/join.html
+++ b/chamber/join.html
@@ -13,9 +13,13 @@
     <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/chamber/join.html">
     <!-- CSS -->
     <link rel="stylesheet" href="styles/style.css">
-    <!-- <link rel="stylesheet" href="styles/larger.css"> -->
+    <link rel="stylesheet" href="styles/larger.css">
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" as="style" crossorigin>
 </head>
 <body>
     <header>
@@ -36,7 +40,7 @@
         </nav>
     </header>
     <main id="join-main-container">
-        <h1>JOIN</h1>
+        <h1>Join Bulacan Chamber of Commerce</h1>
         <div class="content-container">
             <section id="membership-application-form">
                 <h2>Membership Application Form</h2>
