add hero section

--- a/bizlyhub/index.html
+++ b/bizlyhub/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/large.css">
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico">
+    <link rel="preload" as="image" href="images/hero-image.webp">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,7 +40,18 @@
         </nav>
     </header>
     <main>
-        
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Solving Your Web Challenges with Custom Solutions</h1>
+                <p>Tailored web design and development that addresses your unique business needs and delivers results.</p>
+                <a href="https://www.facebook.com/profile.php?id=61567562983142" target="_blank">
+                    <button class="cta-button">Get a Free Consultation</button>
+                </a>
+            </div>
+            <div class="hero-image">
+                <img src="images/hero-image.webp" alt="Hero Image" width="577" height="433">
+            </div>
+        </section>
     </main>
     <footer>
 
