update - add services section in landing page

--- a/bizlyhub/index.html
+++ b/bizlyhub/index.html
@@ -52,6 +52,20 @@
                 <img src="images/hero-image.webp" alt="Hero Image" width="577" height="433">
             </div>
         </section>
+        <section class="services">
+            <div class="services-image">
+                <img src="images/services-image.webp" alt="Services Image" loading="lazy" width="577" height="433">
+            </div>
+            <div class="services-content">
+                <h2>We Provide Different Services and Features For You</h2>
+                <ul>
+                    <li>Web Design and Development</li>
+                    <li>SEO Optimization</li>
+                    <li>Responsive Web Design</li>
+                    <li>Content Management System (CMS)</li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer>
 
