update - add email sign up

--- a/bizlyhub/index.html
+++ b/bizlyhub/index.html
@@ -66,6 +66,16 @@
                 </ul>
             </div>
         </section>
+        <section class="email-signup">
+            <div class="email-signup-content">
+                <h2>Get Exclusive Deals & Updates</h2>
+                <p>Sign up for our newsletter and be the first to know about new products, special offers, and exclusive content.</p>
+                <form>
+                    <input type="email" placeholder="Enter your email address">
+                    <button type="submit">Sign Up Now</button>
+                </form>
+            </div>
+        </section>
     </main>
     <footer>
 
