update - add json for testimonials

--- a/bizlyhub/index.html
+++ b/bizlyhub/index.html
@@ -76,6 +76,10 @@
                 </form>
             </div>
         </section>
+        <section class="testimonials">
+            <h2>What Our Clients Say</h2>
+            <div class="testimonials-container"></div>
+        </section>
     </main>
     <footer>
 
