--- a/bizlyhub/index.html
+++ b/bizlyhub/index.html
@@ -82,9 +82,28 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer-content">
+            <div class="footer-section footer-brand">
+                <img src="images/logo.webp" alt="Your Logo" width="200" height="150">
+                <p>Your Software Business Partner</p>
+            </div>
+            <div class="footer-section footer-social">
+                <h3>Follow Us</h3>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/profile.php?id=61567562983142" target="_blank"><img src="images/facebook-icon.webp" alt="Facebook" height="30" width="30"></a>
+                    <a href="https://github.com/josephperalta03011993" target="_blank"><img src="images/github-icon.webp" alt="Github" height="30" width="30"></a>
+                    <a href="https://www.linkedin.com/in/jdperalta/" target="_blank"><img src="images/linkedin-icon.webp" alt="LinkedIn" height="30" width="30"></a>
+                </div>
+            </div>
+            <div class="footer-section footer-contact">
+                <h3>Call Us</h3>
+                <p>+639626710210</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Copyright BizlyHub. All Rights Reserved.</p>
+        </div>
     </footer>
-    <!-- Defer JS Here -->
      
 </body>
 </html>
