update - services 15 cards created dynamically using JSON

--- a/bizlyhub/index.html
+++ b/bizlyhub/index.html
@@ -45,7 +45,7 @@
                 <h1>Solving Your Web Challenges with Custom Solutions</h1>
                 <p>Tailored web design and development that addresses your unique business needs and delivers results.</p>
                 <a href="https://www.facebook.com/profile.php?id=61567562983142" target="_blank">
-                    <button class="cta-button">Get a Free Consultation</button>
+                    <button class="cta-button">Get a Free Quote</button>
                 </a>
             </div>
             <div class="hero-image">
