--- a/bizlyhub/services.html
+++ b/bizlyhub/services.html
@@ -34,7 +34,7 @@
                 <li><a href="index.html" title="home">Home</a></li>
                 <li class="current-menu-item"><a href="services.html" title="services">Services</a></li>
                 <li><a href="portfolio.html" title="portfolio">Portfolio</a></li>
-                <li><a href="contact.html" title="contact">Contact Us</a></li>
+                <li><a href="contact-us.html" title="contact">Contact Us</a></li>
             </ul>
         </nav>
     </header>
