--- a/bizlyhub/contact-submit.html
+++ b/bizlyhub/contact-submit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bizlyhub: Contact Us</title>
+    <title>Bizlyhub: Thank you</title>
     <meta name="author" content="Joseph D. Peralta">
     <meta name="description" content="Contact BizlyHub, your software business partner in Bulacan City.  Call us at +639626710210 or send us a message!">
     <meta property="og:title" content="Bizlyhub: Contact Us">
@@ -22,9 +22,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- JS -->
-    <script defer src="scripts/contact-script.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <script defer src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script defer src="scripts/contact-submit.js"></script>
 </head>
 <body>
     <header>
@@ -42,43 +40,10 @@
     </header>
     <main>
         <section class="contact-hero">
-            <h1>Contact Us</h1>
-            <p>We'd love to hear from you!</p>
+            <h1>Thank You!</h1>
+            <p>Thank you for contacting us. We have received your inquiry and will respond as soon as possible.</p>
         </section>
-        <div class="container-contact-us">
-            <section class="contact-form">
-                <h2>Send Us a Message</h2>
-                <form action="contact-submit.html" method="GET">  
-                    <div class="form-group">
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message:</label>
-                        <textarea id="message" name="message" rows="5" required></textarea>
-                    </div>
-                    <input type="hidden" name="timestamp" id="timestamp">
-                    <button type="submit">Submit</button>
-                </form>
-            </section>
-
-            <section class="contact-info">
-                <h2>Our Contact Information</h2>
-                <div class="contact-details">
-                    <p><strong>Address:</strong> Block 5 Lot 16 Phase 2 Springtown SJDM Bulacan City</p>  
-                    <p><strong>Phone:</strong> +639626710210</p>  
-                    <p><strong>Email:</strong> info@bizlyhub.com</p>
-                </div>
-
-                <div data-nosnippet aria-hidden="true">
-                    <div id="map"></div>
-                </div>
-            </section>
-        </div>
+        <div id="results"></div>
     </main>
     <footer>
         <div class="footer-content">
