--- a/bizlyhub/index.html
+++ b/bizlyhub/index.html
@@ -44,9 +44,7 @@
             <div class="hero-content">
                 <h1>Solving Your Web Challenges with Custom Solutions</h1>
                 <p>Tailored web design and development that addresses your unique business needs and delivers results.</p>
-                <a href="https://www.facebook.com/profile.php?id=61567562983142" target="_blank">
-                    <button class="cta-button">Get a Free Quote</button>
-                </a>
+                <a href="https://www.facebook.com/profile.php?id=61567562983142" target="_blank" class="cta-button">Get a Free Quote</a>
             </div>
             <div class="hero-image">
                 <img src="images/hero-image.webp" alt="Hero Image" width="577" height="433">
