UPDATE SERVICES PAGE - Fix errors and warnings from HTML and CSS validator

--- a/bizlyhub/services.html
+++ b/bizlyhub/services.html
@@ -43,10 +43,10 @@
             <h1>Our Services</h1>
             <p>Providing innovative solutions to meet your business needs.</p>
         </section>
-        <section class="service-categories"></section>
+        <div class="service-categories"></div>
         <section class="call-to-action">
             <h2>Ready to Get Started?</h2>
-            <a href="contact-us.html"><button>Contact Us</button></a>  
+            <a href="contact-us.html">Contact Us</a>  
         </section>
     </main>
     <footer>
