--- a/bizlyhub/contact-us.html
+++ b/bizlyhub/contact-us.html
@@ -73,7 +73,15 @@
                     <p><strong>Email:</strong> info@bizlyhub.com</p>
                 </div>
 
-                <div data-nosnippet aria-hidden="true">
+                <div id="map-container">  
+                    <div id="map"></div>  
+                    <div class="map-overlay">  
+                        <p class="map-overlay-text">
+                            Map showing the location of BizlyHub in San Jose del Monte City
+                        </p>  
+                    </div> 
+                </div>
+                <div data-nosnippet>
                     <div id="map"></div>
                 </div>
             </section>
