--- a/bizlyhub/portfolio.html
+++ b/bizlyhub/portfolio.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bizlyhub: Contact Us</title>
+    <title>Bizlyhub: Portfolio</title>
     <meta name="author" content="Joseph D. Peralta">
-    <meta name="description" content="Contact BizlyHub, your software business partner in Bulacan City.  Call us at +639626710210 or send us a message!">
-    <meta property="og:title" content="Bizlyhub: Contact Us">
-    <meta property="og:description" content="Contact BizlyHub, your software business partner in Bulacan City.  Call us at +639626710210 or send us a message!">
+    <meta name="description" content="Explore BizlyHub's portfolio showcasing our expertise in web design and development, graphic design, digital marketing. See how we've helped clients achieve their goals with innovative and effective solutions.">
+    <meta property="og:title" content="Bizlyhub: Portfolio">
+    <meta property="og:description" content="Explore BizlyHub's portfolio showcasing our expertise in web design and development, graphic design, digital marketing. See how we've helped clients achieve their goals with innovative and effective solutions.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://josephperalta03011993.github.io/wdd231/bizlyhub/images/og-image.webp">
-    <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/bizlyhub/contact-us.html">
+    <meta property="og:url" content="https://josephperalta03011993.github.io/wdd231/bizlyhub/portfolio.html">
     <!-- CSS -->
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/large.css">
