update - add dialog modal in portfolio

--- a/bizlyhub/portfolio.html
+++ b/bizlyhub/portfolio.html
@@ -43,6 +43,10 @@
             <p>BizlyHub is dedicated to helping our clients achieve their business goals through custom software solutions.</p>
         </section>
         <div class="portfolio-list"></div>
+        <!-- Reusable Modal -->
+        <dialog id="dialogBox">
+            <span id="dialog-content"></span>
+        </dialog>
         <section class="call-to-action">
             <h2>Ready to Get Started?</h2>
             <a href="contact-us.html">Contact Us</a>  
