--- a/bizlyhub/index.html
+++ b/bizlyhub/index.html
@@ -67,9 +67,9 @@
             <div class="email-signup-content">
                 <h2>Get Exclusive Deals & Updates</h2>
                 <p>Sign up for our newsletter and be the first to know about new products, special offers, and exclusive content.</p>
-                <form>
-                    <input type="email" placeholder="Enter your email address">
-                    <button type="submit">Sign Up Now</button>
+                <form id="email-signup-form">  
+                    <input type="email" id="email-input" placeholder="Enter your email address" required>  
+                    <button id="btn-email-signup" type="submit">Sign Up Now</button>
                 </form>
             </div>
         </section>
