update - use localStorage to set and get email subscription

--- a/bizlyhub/contact-us.html
+++ b/bizlyhub/contact-us.html
@@ -79,7 +79,7 @@
                     </div>
                     <div class="map-overlay">  
                         <p class="map-overlay-text">
-                            Map showing the location of BizlyHub in San Jose del Monte City
+                            Map showing the location of BizlyHub in San Jose del Monte Bulacan City
                         </p>  
                     </div> 
                 </div>
