--- a/bizlyhub/index.html
+++ b/bizlyhub/index.html
@@ -64,6 +64,7 @@
             </div>
         </section>
         <section class="email-signup">
+            <div id="welcome-message"></div>
             <div class="email-signup-content">
                 <h2>Get Exclusive Deals & Updates</h2>
                 <p>Sign up for our newsletter and be the first to know about new products, special offers, and exclusive content.</p>
